...
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="210dp"
        android:background="#282828"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Button_dividend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button_gambling"
        app:srcCompat="@mipmap/plus_icon_round" />

    <Spinner
        android:id="@+id/dropDown_InOut"
...
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/droid"
        android:text="Gehalt"
        android:textColor="#FFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/Button_refund"
        app:layout_constraintEnd_toEndOf="@+id/Button_salary"
        app:layout_constraintStart_toStartOf="@+id/Button_salary"
        app:layout_constraintTop_toBottomOf="@+id/Button_salary" />

    <TextView
        android:id="@+id/textView_awards"
        android:layout_width="wrap_content"
...
